--- a/meta/main.yml
+++ b/meta/main.yml
@@ -208,7 +208,7 @@ galaxy_info:
   #  - Any
 
   galaxy_tags:
-    icinga2
+    - icinga2
     # List tags for your role here, one per line. A tag is
     # a keyword that describes and categorizes the role.
     # Users find roles by searching for tags. Be sure to
