added option to configure endpoint, added overview.png

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,10 @@
 ---
 # defaults file for rbicker.icinga2node
 icinga2_caserver: localhost
-icinga2_master_port: 5665
-icinga2_master_zone: master
+icinga2_configserver: localhost
+icinga2_parent_port: 5665
+icinga2_parent_zone: master
 icinga2_global_zone: global-templates
 icinga2_local_conf: true
+icinga2_conf_endpoint: true
+icinga2_dir_endpoint: /etc/icinga2/conf.d/endpoints
