--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 galaxy_info:
   author: Raphael Bicker
-  description: Ensure icinga2 node is set up (including key exchange)
+  description: Ensure icinga2 node is set up
   #company: your company (optional)
 
   # If the issue tracker for your role is not on github, uncomment the
