several enhancements and bugfixes

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,21 +1,23 @@
 ---
 # defaults file for rbicker.icinga2node
 icinga2_caserver: localhost
-icinga2_configserver: localhost
-icinga2_parent_port: 5665
+icinga2_configserver: "{{ ansible_configserver }}"
+icinga2_node_zone: "{{ icinga2_node_endpoint }}"
+icinga2_node_endpoint: "{{ ansible_nodename }}"
+icinga2_node_sync_ca: false
+icinga2_node_global_zone: global-templates
+icinga2_node_local_conf: false
+icinga2_node_features: [api, checker, mainlog]
 icinga2_parent_zone: master
 icinga2_parent_endpoint: "{{ icinga2_parent_zone }}"
-icinga2_global_zone: global-templates
-icinga2_local_conf: true
-icinga2_endpoint_add: true
-icinga2_endpoint_dir: /etc/icinga2/conf.d/endpoints
-icinga2_endpoint_file: "{{ ansible_nodename }}.conf" 
-icinga2_host_add: true
-icinga2_host_replace: false
-icinga2_host_objectname: "{{ ansible_nodename }}"
-icinga2_host_dir: /etc/icinga2/conf.d/hosts
-icinga2_host_file: "{{ ansible_nodename }}.conf"
-icinga2_host_address: "{{ ansible_default_ipv4.address }}"
-icinga2_host_check_command: "ping4"
-icinga2_host_template: false
-icinga2_reload_server_config: true
+icinga2_parent_port: 5665
+icinga2_cs_endpoint_add: true
+icinga2_cs_endpoint_dir: /etc/icinga2/conf.d/endpoints
+icinga2_cs_endpoint_file: "{{ icinga2_node_endpoint }}.conf" 
+icinga2_cs_host_add: true
+icinga2_cs_host_replace: false
+icinga2_cs_host_objectname: "{{ icinga2_node_endpoint }}"
+icinga2_cs_host_dir: /etc/icinga2/conf.d/hosts
+icinga2_cs_host_file: "{{ icinga2_node_endpoint }}.conf"
+icinga2_cs_service_reload: true
+icinga2_repo_url: https://packages.icinga.com/epel/7/release/noarch/icinga-rpm-release-7-1.el7.centos.noarch.rpm
