--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,21 +1,21 @@
 ---
 # tasks file for rbicker.icinga2node
 
-- name: "get /var/lib/icinga2/ca/ca.crt contents from {{ icinga2_caserver }}"
+- name: get /var/lib/icinga2/ca/ca.crt contents from caserver
   slurp:
     src: /var/lib/icinga2/ca/ca.crt
   register: ca_crt
   delegate_to: "{{ icinga2_caserver }}"
   when: icinga2_node_sync_ca
 
-- name: "get /var/lib/icinga2/ca/ca.key contents from {{ icinga2_caserver }}"
+- name: get /var/lib/icinga2/ca/ca.key contents from caserver
   slurp:
     src: /var/lib/icinga2/ca/ca.key
   register: ca_key
   delegate_to: "{{ icinga2_caserver  }}"
   when: icinga2_node_sync_ca
 
-- name: "get /var/lib/icinga2/ca/serial.txt contents from {{ icinga2_caserver }}"
+- name: get /var/lib/icinga2/ca/serial.txt contents from caserver
   slurp:
     src: /var/lib/icinga2/ca/serial.txt
   register: ca_serial
@@ -29,7 +29,7 @@
 - include: "windows.yml"
   when: (ansible_os_family == "Windows")
 
-- name: "ensure {{ icinga2_cs_endpoint_dir }} directory is present"
+- name: ensure endpoint directory is present on configserver
   file:
     path: "{{ icinga2_cs_endpoint_dir }}"
     state: directory
@@ -38,24 +38,26 @@
   delegate_to: "{{ icinga2_configserver }}"
   when: icinga2_cs_endpoint_add
 
-- name: "ensure enpoint configuration exists on {{ icinga2_configserver }} in {{ icinga2_cs_endpoint_dir }}/{{ icinga2_cs_endpoint_file }}"
+- name: ensure endpoint configuration exists on configserver
   blockinfile:
     name: "{{ icinga2_cs_endpoint_dir }}/{{ icinga2_cs_endpoint_file }}"
     create: yes
     owner: icinga
     group: icinga
     marker: "// ansible {{ icinga2_node_endpoint }} {mark}"
-    block: |
+    block: |+
+
       object Endpoint "{{ icinga2_node_endpoint }}" { }
       object Zone "{{ icinga2_node_zone }}" {
         endpoints               = [ "{{ icinga2_node_endpoint }}" ]
         parent                  = "{{ icinga2_parent_zone }}"
       }
+
   delegate_to: "{{ icinga2_configserver }}"
   when: icinga2_cs_endpoint_add
   notify: "reload icinga2 server config"
 
-- name: "ensure {{ icinga2_cs_host_dir }} directory is present on {{ icinga2_configserver }}"
+- name: ensure host directory is present on configserver
   file:
     path: "{{ icinga2_cs_host_dir }}"
     state: directory
@@ -64,7 +66,7 @@
   delegate_to: "{{ icinga2_configserver }}"
   when: icinga2_cs_host_add
 
-- name: "ensure {{ icinga2_cs_host_dir }}/{{ icinga2_cs_host_file }} corresponds to template on {{ icinga2_configserver }}"
+- name: ensure host config corresponds to template on {{ icinga2_configserver }}
   template:
     force: "{{ icinga2_cs_host_replace}}"
     src: host.conf.j2
