--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,6 +8,7 @@ icinga2_node_sync_ca: false
 icinga2_node_global_zone: global-templates
 icinga2_node_local_conf: false
 icinga2_node_features: [api, checker, mainlog]
+icinga2_node_nagios_plugins: [nagios-plugins-all]
 icinga2_parent_zone: master
 icinga2_parent_endpoint: "{{ icinga2_parent_zone }}"
 icinga2_parent_port: 5665
