--- a/tasks/linux.yml
+++ b/tasks/linux.yml
@@ -23,10 +23,24 @@
     name: icinga2
     enabled: true
 
-- name: ensure nagios-plugins-all is installed
+- name: ensure nagios-plugins are installed
   yum:
-    name: nagios-plugins-all
+    name: '{{ item }}'
     state: present
+  with_items: '{{ icinga2_node_nagios_plugins }}'
+
+# 2018-04-06 -=Thomy=-
+# rpcbind wird nach dem Installieren von "nagios-plugins-all" installiert und aktiviert -> 
+# daher folgender Task:
+- name: ensure rpcbind.socket is disabled 
+  systemd:
+    name: '{{ item }}'
+    enabled: false
+    state: stopped
+  with_items:
+    - rpcbind.socket
+    - rpcbind.service
+  when: false # error -> rpcbind service / socket does not exist on new systems
 
 - name: ensure /usr/lib64/nagios/plugins/* is owned by icinga:icinga
   file:
@@ -123,7 +137,7 @@
   when: not icinga2_pki_keyfile.stat.exists
 
 - name: icinga2 node setup
-  command: "icinga2 node setup --endpoint {{ icinga2_parent_endpoint }} --master_host {{ icinga2_parent_host }},{{ icinga2_parent_port }} --trustedcert /etc/icinga2/pki/trusted-master.crt --ticket {{ icinga2_pki_ticket.stdout }} --zone {{ icinga2_parent_zone }} --accept-config --accept-commands"
+  command: "icinga2 node setup --endpoint {{ icinga2_parent_endpoint }} --parent_host {{ icinga2_parent_host }},{{ icinga2_parent_port }} --trustedcert /etc/icinga2/pki/trusted-master.crt --ticket {{ icinga2_pki_ticket.stdout }} --zone {{ icinga2_parent_zone }} --accept-config --accept-commands"
   when: not icinga2_pki_keyfile.stat.exists
 
 - name: ensure icinga2 features are enabled
@@ -170,4 +184,3 @@
     line: "const TicketSalt = \"{{ icinga2_node_salt }}\""
     path: /etc/icinga2/constants.conf
   when: icinga2_node_salt is defined
-
