--- a/tasks/windows.yml
+++ b/tasks/windows.yml
@@ -5,9 +5,13 @@
   win_chocolatey:
     name: icinga2
   register: icinga2_win_install
-  #changed_when: true
-  when: false
+#  changed_when: true
   
+- name: ensure icinga2 is latest
+  win_chocolatey:
+    name: icinga2
+    state: latest
+
 - name: icinga2 pki ticket generation on keyserver
   command: icinga2 pki ticket --cn "{{ icinga2_node_endpoint }}"
   delegate_to: "{{ icinga2_caserver  }}"
@@ -33,7 +37,7 @@
   when: icinga2_win_install.changed
 
 - name: icinga2 node setup
-  win_shell: "\"{{ ansible_env.ProgramFiles }}\\ICINGA2\\sbin\\icinga2.exe\" node setup --cn {{ icinga2_node_endpoint }} --endpoint {{ icinga2_parent_endpoint }} --master_host {{ icinga2_parent_host }},{{ icinga2_parent_port }} --trustedcert {{ ansible_env.ProgramData }}\\icinga2\\etc\\icinga2\\pki\\trusted-master.crt --ticket {{ icinga2_pki_ticket.stdout }} --zone {{ icinga2_parent_zone }} --accept-config --accept-commands"
+  win_shell: "\"{{ ansible_env.ProgramFiles }}\\ICINGA2\\sbin\\icinga2.exe\" node setup --cn {{ icinga2_node_endpoint }} --endpoint {{ icinga2_parent_endpoint }} --parent_host {{ icinga2_parent_host }},{{ icinga2_parent_port }} --trustedcert {{ ansible_env.ProgramData }}\\icinga2\\etc\\icinga2\\pki\\trusted-master.crt --ticket {{ icinga2_pki_ticket.stdout }} --zone {{ icinga2_parent_zone }} --accept-config --accept-commands"
   args:
     executable: cmd
   when: icinga2_win_install.changed
